Fix routing for GitHub Pages deployment

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "beyond-chat",
-  "homepage": "https://47dmc.github.io/beyondchats",
+  "homepage": "https://47dmc.github.io/beyondchats/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
